--- a/Mod4/MyWork/CarRental/index.html
+++ b/Mod4/MyWork/CarRental/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <!-- Custom Site CSS -->
+    <link rel="stylesheet" href="css/styles.css">
+
     <title>Car Rentals Galore!</title>
 </head>
 
@@ -26,46 +29,60 @@
                 <label for="inputNumDays">Number of days: </label>
                 <input type="number" min="0" class="form-control" id="inputNumDays" name="inputNumDays">
             </div>
-            <fieldset>
-                <legend class="font-weight-light">Options
+            <fieldset class="border border-info p-3">
+                <legend class="font-weight-light text-info w-25">Pick your car
+                </legend>
+                <div class="form-group">
+                    <label for="inputCarType">Example select</label>
+                    <select class="form-control" id="inputCarType" name="inputCarType">
+                        <option class="font-italic" value=" ">Choose one...</option>
+                        <option value="Economy">Economy ($29.99/day)</option>
+                        <option value="Compact">Compact ($34.99/day</option>
+                        <option value="Intermediate">Intermediate ($39.99/day)</option>
+                        <option value="FullSize">Full Size ($44.99)</option>
+                    </select>
+                </div>
+            </fieldset>
+            <fieldset class="border border-info p-3">
+                <legend class="font-weight-light text-info w-25">Options
                 </legend>
                 <div class="form-group form-check">
                     <input type="checkbox" class="form-check-input" id="selectTollTag" name="selectTollTag">
                     <label class="form-check-label" for="selectTollTag">Electronic Toll Tag ($3.95/day)</label>
                 </div>
                 <div class="form-group form-check">
-                    <input type="checkbox" class="form-check-input" id="selectGPS" name="selectGPS">
-                    <label class="form-check-label" for="selectGPS">GPS ($2.95/day)</label>
+                    <input type="checkbox" class="form-check-input" id="selectGps" name="selectGps">
+                    <label class="form-check-label" for="selectGps">GPS ($2.95/day)</label>
                 </div>
                 <div class="form-group form-check">
                     <input type="checkbox" class="form-check-input" id="selectRoadside" name="selectRoadside">
                     <label class="form-check-label" for="selectRoadside">Roadside Assitance ($2.95/day)</label>
                 </div>
             </fieldset>
-            <fieldset>
-                <legend class="font-weight-light">Under 25?
+            <fieldset class="border border-info p-3">
+                <legend class="font-weight-light text-info w-25">Under 25?
                 </legend>
                 <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="age" id="notUnder25" value="notUnder25" checked>
                     <label class="form-check-label" for="notUnder25">No</label>
                 </div>
+
                 <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="age" id="under25" value="under25">
                     <label class="form-check-label" for="under25">Yes</label>
                 </div>
+            </fieldset>
                 <div>
-                    <input class="btn btn-info mt-3" type="button" id="calcBtn" name="calcBtn"
+                    <input class="btn btn-info my-3" type="button" id="calcBtn" name="calcBtn"
                         value="Estimate Total Cost">
                 </div>
-                <div id="carRentalCostOutput"></div>
-                <div id="optionCostOutput"></div>
-                <div id="under25CostOutput"></div>
-                <div id="totalDueOutput" class="mt-3"></div>
-            </fieldset>
-
-
-
-
+                <div>
+                    <p id="carRentalCostOutput"></p>
+                    <p id="optionCostOutput"></p>
+                    <p id="under25CostOutput"></p>
+                    <p id="returnDateOutput"></p>
+                    <p id="totalCostOutput"></p>
+                </div>
 
         </form>
     </main>
@@ -80,6 +97,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src="Scripts/carRental.js"></script>
 </body>
 
 </html>
